# ZLIBCMake

./: .gitignore  CMakeLists.txt  README.md  clean.sh  install.bat  install.sh  install_wasm.sh  usage.bat  usage.sh  usage_wasm.sh
CMake/: DumpVariables.cmake
Usage/: CMakeLists.txt  copyzlib.cmake  main.cxx
